fix: update primary color and verified icon color for better visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.21 0.006 285.885);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(52.391% 0.11606 161.36);
+  --primary: oklch(0.546 0.1474 146.26);
   --primary-foreground: oklch(85.452% 0.0001 271.152);
   --secondary: oklch(0.274 0.006 286.033);
   --secondary-foreground: oklch(0.985 0 0);
